--- a/memote.ini
+++ b/memote.ini
@@ -1,5 +1,5 @@
 [memote]
-model = mcapsBath.xml
+model = ModelFiles/xml/mcapsBath.xml
 directory = Results
 github_username = ChristianLieven
 github_repository = memote-m-capsulatus
