chore: update memote.ini to reflect latest version

--- a/memote.ini
+++ b/memote.ini
@@ -1,5 +1,11 @@
+
 [memote]
 model = /Users/clie/Desktop/EFPro2/Git Repo/memote-m-capsulatus/ModelFiles/xml/iMcBath.xml
-directory = Results
+location = Results
 github_username = ChristianLieven
 github_repository = memote-m-capsulatus
+experimental = data/experiments.yml
+deployment = gh-pages
+
+[pre_commit]
+yaml = /Users/clie/Desktop/EFPro2/Git Repo/memote-m-capsulatus/ModelFiles/xml/iMcBath.yml
