fix: use relative path in memote.ini

--- a/memote.ini
+++ b/memote.ini
@@ -1,6 +1,6 @@
 
 [memote]
-model = /Users/clie/Desktop/EFPro2/Git Repo/memote-m-capsulatus/ModelFiles/xml/iMcBath.xml
+model = ModelFiles/xml/iMcBath.xml
 location = Results
 github_username = ChristianLieven
 github_repository = memote-m-capsulatus
@@ -8,4 +8,4 @@ experimental = data/experiments.yml
 deployment = gh-pages
 
 [pre_commit]
-yaml = /Users/clie/Desktop/EFPro2/Git Repo/memote-m-capsulatus/ModelFiles/xml/iMcBath.yml
+yaml = ModelFiles/xml/iMcBath.yml
