fix: try using origin gh-pages to fix broken CI.

--- a/memote.ini
+++ b/memote.ini
@@ -5,7 +5,7 @@ location = Results
 github_username = ChristianLieven
 github_repository = memote-m-capsulatus
 experimental = data/experiments.yml
-deployment = gh-pages
+deployment = origin/gh-pages
 
 [pre_commit]
 yaml = ModelFiles/xml/iMcBath.yml
