fix: correct yaml path

--- a/memote.ini
+++ b/memote.ini
@@ -8,4 +8,4 @@ experimental = data/experiments.yml
 deployment = gh-pages
 
 [pre_commit]
-yaml = ModelFiles/xml/iMcBath.yml
+yaml = ModelFiles/yml/iMcBath.yml
