chore: reformat travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,14 @@ git:
 
 branches:
   except:
-  - gh-pages
+    - "gh-pages"
 
 before_install:
-- pip install --upgrade pip setuptools wheel
+  - pip install --upgrade pip setuptools wheel
 
 install:
-- pip install https://github.com/opencobra/memote/archive/fix_memote_report_history.zip
+  - pip install https://github.com/opencobra/memote/archive/fix_memote_report_history.zip
 
 script:
-- ./scripts/travis_deploy.sh
+  - git checkout "${TRAVIS_BRANCH}"
+  - ./scripts/travis_deploy.sh
